--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,43 @@
   </head>
   <body>
     <header class="app-header">
-      <h1>XO Arena</h1>
+      <h1>
+        <svg class="game-logo" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <!-- Grid lines -->
+          <line x1="33" y1="10" x2="33" y2="90" stroke="rgba(148, 163, 184, 0.4)" stroke-width="2"/>
+          <line x1="67" y1="10" x2="67" y2="90" stroke="rgba(148, 163, 184, 0.4)" stroke-width="2"/>
+          <line x1="10" y1="33" x2="90" y2="33" stroke="rgba(148, 163, 184, 0.4)" stroke-width="2"/>
+          <line x1="10" y1="67" x2="90" y2="67" stroke="rgba(148, 163, 184, 0.4)" stroke-width="2"/>
+          <!-- O (green) -->
+          <circle cx="50" cy="21" r="9" fill="none" stroke="#10b981" stroke-width="3"/>
+          <!-- X (red) top right -->
+          <line x1="72" y1="16" x2="86" y2="30" stroke="#ef4444" stroke-width="3" stroke-linecap="round"/>
+          <line x1="86" y1="16" x2="72" y2="30" stroke="#ef4444" stroke-width="3" stroke-linecap="round"/>
+          <!-- X (red) bottom left -->
+          <line x1="14" y1="70" x2="28" y2="84" stroke="#ef4444" stroke-width="3" stroke-linecap="round"/>
+          <line x1="28" y1="70" x2="14" y2="84" stroke="#ef4444" stroke-width="3" stroke-linecap="round"/>
+          <!-- O (green) bottom right -->
+          <circle cx="79" cy="77" r="9" fill="none" stroke="#10b981" stroke-width="3"/>
+        </svg>
+        XO Arena
+      </h1>
       <div class="user-info" id="user-info">
         <div class="login-buttons">
-          <button id="google-login-button" class="primary-button">Sign in with Google</button>
-          <button id="facebook-login-button" class="secondary-button">Sign in with Facebook</button>
+          <button id="google-login-button" class="primary-button">
+            <svg class="button-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+              <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+              <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+              <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+            </svg>
+            Sign in with Google
+          </button>
+          <button id="facebook-login-button" class="secondary-button">
+            <svg class="button-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" fill="#1877F2"/>
+            </svg>
+            Sign in with Facebook
+          </button>
         </div>
       </div>
     </header>
@@ -21,12 +53,11 @@
       <div class="play-grid">
         <section id="status-section" class="status-section hidden">
         <header class="status-header">
-          <p id="status-message">Loading...</p>
           <span id="nickname-display" class="nickname-chip">Nickname: player00001</span>
         </header>
         <div class="score-summary">
-          <span id="score-display">Score: 0</span>
-          <span id="streak-display">Streak: 0</span>
+          <span id="score-display" class="player-score-display">Score: 0</span>
+          <span id="streak-display" class="player-streak-display">Streak: 0</span>
           <span id="rank-display">Rank: Rookie</span>
         </div>
         <div class="record-summary">
@@ -47,7 +78,7 @@
         </section>
 
         <section id="game-section" class="game-section hidden">
-          <div id="result-banner" class="result-banner hidden" role="status"></div>
+      <div id="game-status" class="game-status" role="status"></div>
           <div id="board" class="board"></div>
           <div class="game-controls">
             <button id="reset-button" class="secondary-button" disabled>Play Again</button>
